new file:   src/img/fondo.png 	modified:   src/layouts/Layout.astro 	modified:   src/pages/index.astro

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -42,7 +42,8 @@ import Footer from "../components/Footer.astro";
 	}
 	html {
 		font-family: system-ui, sans-serif;
-		background: linear-gradient(to bottom, #40084b 50%, #f08ae3);	}
+		background: linear-gradient(to bottom, #40084b 50%, #f08ae3);	
+	}
 	code {
 		font-family:
 			Menlo,
