new file:   src/pages/404.astro 	modified:   src/pages/index.astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import Ramen from '../img/ramen.png';
 					<a href=""><button>Contacto</button></a>
 				</div>
 				<div class="login">
-					<a href=""><button>Iniciar sesión</button></a>
+					<a href="/login"><button>Iniciar sesión</button></a>
 					<a href=""><button>Registro</button></a>
 				</div>
 			</div>
