modified:   src/pages/404.astro 	modified:   src/pages/index.astro 	new file:   src/pages/login.astro

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -144,4 +144,15 @@ import Logo from "../img/logotipo.png"
             height: 35%;
         }
     }
+
+    @media (width < 415px){
+        #error{
+            font-size: 35px;
+        }
+
+        img{
+            width: 50%;
+            height: 35%;
+        }
+    }
 </style>
