--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,13 +15,13 @@ import Ramen from '../img/ramen.png';
 			</div>
 			<div class="botones">
 				<div class="paginas">
-					<a href=""><button>Productos</button></a>
-					<a href=""><button>Servicios</button></a>
-					<a href=""><button>Contacto</button></a>
+					<a href="/productos"><button>Productos</button></a>
+					<a href="/servicios"><button>Servicios</button></a>
+					<a href="/contacto"><button>Contacto</button></a>
 				</div>
 				<div class="login">
 					<a href="/login"><button>Iniciar sesión</button></a>
-					<a href=""><button>Registro</button></a>
+					<a href="/register"><button>Registro</button></a>
 				</div>
 			</div>
 		</section>
@@ -138,6 +138,7 @@ import Ramen from '../img/ramen.png';
 
 	.login a button{
 		background: linear-gradient(to bottom, #f08ae3, #5ac2a3 50%);
+		color: #fff;
 		border: none;
 		border-radius: 15px;
 		font-size: 20px;
