modified:   src/pages/index.astro 	modified:   src/pages/login.astro

--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -137,4 +137,116 @@ import Logo from "../img/logotipo.png"
         text-decoration: underline;
         font-weight: bold;
     }
+
+    @media (width < 1500px){
+        fieldset img{
+            top: -13vh;
+            left: 34vh;
+        }
+
+        fieldset input{
+            margin-left: 8%;
+        }
+
+        fieldset button{
+            margin-left: 30vh;
+        }
+    }
+
+    @media (width < 1300px){
+        fieldset{
+            padding: 20px 10px 20px 48px;
+        }
+
+        fieldset img{
+            top: -14vh;
+        }
+
+        fieldset button{
+            width: 20%;
+            margin-left: 28vh;
+        }
+    }
+
+    @media (width < 1100px){
+        fieldset{
+            height: 40vh;
+            font-weight: 100;
+            font-size: 1em;
+            padding: 35px 15px 30px 50px;           
+        }
+        
+        fieldset h1{
+            margin-top: 70vh;
+            margin-bottom: -2px;
+        }
+
+        fieldset img{
+            top: -12vh;
+            left: 35vh;
+        }
+
+        fieldset input{
+            padding: 7px;
+            margin-top: -10px;
+        }
+
+        #enlaces{
+            margin-bottom: 60vh;
+            margin-top: -20px;
+        }
+    }
+
+    @media (width < 900px){
+        #enlaces{
+            margin-top: -25px;
+        }
+        
+        fieldset input{
+            margin-top: -12px;
+        }
+    }
+
+    @media (width < 800px){
+        fieldset h1{
+            margin-top: 65vh;
+            margin-bottom: 20px;
+        }        
+
+        fieldset img{
+            width: 40%;
+            margin-left: -19vh;
+            margin-top: 4vh;
+        }
+
+        fieldset input{
+            margin-top: -2px;
+        }
+
+        fieldset button{
+            margin: 3vh 12vh 3vh 12vh;
+            width: 25%;
+        }
+    }
+
+    @media (width < 500px){
+        form{
+            width: 75%;
+            margin-right: 8vh;
+        }
+
+        fieldset img{
+            margin-top: 2vh;
+            margin-left: -17vh;
+        }
+
+        fieldset button{
+            margin: 3vh 14vh;
+        }
+
+        #enlaces{
+            margin-right: 3vh;
+            font-size: small;
+        }
+    }
 </style>
