modified:   src/pages/login.astro 	modified:   src/pages/register.astro 	new file:   src/pages/reset.astro

--- a/src/pages/register.astro
+++ b/src/pages/register.astro
@@ -301,4 +301,26 @@ import Logo from "../img/logotipo.png"
             padding-bottom: 27%;
         }
     }
+
+    @media (width < 380px){
+        fieldset{
+            padding-bottom: 50%;
+            padding-top: 30%;
+        }
+
+        fieldset h1{
+            margin-top: 87vh;
+        }
+
+        fieldset button{
+            width: 32%;
+            margin-left: 13.5vh;
+        }
+
+        fieldset img{
+            width: 45%;
+            margin-left: -17vh;
+            margin-top: 0.5vh;
+        }
+    }
 </style>
