--- a/src/pages/reset.astro
+++ b/src/pages/reset.astro
@@ -3,20 +3,17 @@ import Layout from "../layouts/Layout.astro"
 import Logo from "../img/logotipo.png"
 ---
 
-<Layout title="iniciar sesión">
+<Layout title="Cambiar de contraseña">
     <main>
         <form action="" method="post">
             <fieldset>
                 <a href="/"><img src={Logo.src} alt="logotipo"></a>
-                <h1>Iniciar sesión</h1>
+                <h1>Recuperar contraseña</h1>
                 <label for="mail">Correo electrónico</label>
                 <input type="email" id="mail" required>  
-                <label for="contraseña">Contraseña</label>
-                <input type="password" id="contraseña" required>
-                <button type="submit">Comenzar</button>
+                <button type="submit">Siguiente</button>
                 <div id="enlaces">
-                    <a href="/reset"><p>He olvidado mi contraseña</p></a>
-                    <a href="/register"><p>Aún no tengo cuenta</p></a>
+                    <a href="register"><p>Aún no tengo cuenta</p></a>
                 </div>
             </fieldset>
         </form>
@@ -75,7 +72,7 @@ import Logo from "../img/logotipo.png"
     fieldset img{
         width: 25%;
         position: absolute;
-        top: -16.5vh;
+        top: -14vh;
         left: 37vh;
         transition: all 0.5s ease-in;
     }
@@ -244,10 +241,9 @@ import Logo from "../img/logotipo.png"
             margin: 3vh 14vh;
         }
 
-        #enlaces{
-            margin-right: 3vh;
-            font-size: small;
-        }
+        #enlaces a{
+            font-size: 12px;
+        }   
     }
 
     @media (width < 450px){
@@ -261,11 +257,17 @@ import Logo from "../img/logotipo.png"
         }
 
         fieldset img{
+            width: 50%;
+            margin-left: -20vh;
             margin-top: 4.5vh;
         }
 
         fieldset input{
             margin-top: -3%;
+        }
+
+        fieldset button{
+            margin-right: 15vh;
         }
 
         #enlaces{
@@ -289,10 +291,6 @@ import Logo from "../img/logotipo.png"
     }
 
     @media (width < 380px){
-        fieldset{
-            padding-bottom: 26%;
-        }
-
         fieldset h1{
             margin-top: 80vh;
         }
@@ -300,7 +298,6 @@ import Logo from "../img/logotipo.png"
         fieldset img{
             width: 45%;
             margin-left: -17vh;
-            margin-top: -1vh;
         }
     }
 </style>
