--- a/src/layouts/Layout-footer.astro
+++ b/src/layouts/Layout-footer.astro
@@ -6,7 +6,6 @@ interface Props {
 const { title } = Astro.props;
 
 import Logo from "../img/logotipo.png";
-import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 ---
 
@@ -21,10 +20,10 @@ import Footer from "../components/Footer.astro";
 		<title>{title}</title>
 	</head>
 	<body>
-		<Header />
 		<main>
 			<slot />
 		</main>
+		<Footer />
 	</body>
 </html>
 <style is:global>
