modified:   src/components/Header.astro 	new file:   src/layouts/Layout-pag.astro 	modified:   src/layouts/Layout.astro 	modified:   src/pages/index.astro 	modified:   src/pages/login.astro 	new file:   src/pages/productos.astro 	modified:   src/pages/register.astro 	modified:   src/pages/reset.astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -91,7 +91,7 @@ import LayoutFooter from '../layouts/Layout-footer.astro';
 	}
 
 	.paginas a button:hover{
-		animation: roll 1s ease-in;
+		animation: roll 1s ease-in infinite;
 		scale: 1.2;
 		transition: scale 0.75s ease-out;
 		cursor: pointer;
