--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro"
 import Logo from "../img/logotipo.png"
 ---
 
-<Layout title="iniciar sesión">
+<Layout title="Boku no Coffee | Iniciar sesión">
     <main>
         <form action="" method="post">
             <fieldset>
