--- a/src/pages/register.astro
+++ b/src/pages/register.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro"
 import Logo from "../img/logotipo.png"
 ---
 
-<Layout title="Registrarse">
+<Layout title="Boku no Coffee | Registrarse">
     <main>
         <form action="" method="post">
             <fieldset>
