--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,1 +1,176 @@
+---
+import Logo from '../img/logotipo.png';
+---
 
+<header>
+    <section>
+        <div class="izquierda">
+            <a href="/productos">Productos</a>
+            <a href="/servicios">Servicios</a>
+        </div>
+        <div class="derecha">
+            <a href="/contacto">Contacto</a>
+            <a href="/login"><button>Iniciar sesión</button></a>
+        </div>
+    </section>
+    <a href="/"><img src={Logo.src} alt="logotipo"></a>
+</header>
+
+<style>
+	@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap');
+
+    header{
+        position: fixed;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        backdrop-filter: blur(5px);
+        top: 0;
+        left: 0;
+        border-bottom: 2px solid black;
+        box-shadow: 0 2.5px 10px black;
+        padding: 20px 0 20px 0;
+    }
+
+    header a{
+        width: 2%;
+        margin-top: 30px;
+    }
+
+    header a img{
+        width: 10%;
+        position: absolute;
+        top: -35%;
+        left: 45%;
+        transition: all 0.4s ease-in-out;
+    }
+
+    header a img:hover{
+        scale: 1.2;
+        filter: drop-shadow(5px 5px 10px black);
+    }
+
+    section{
+        display: flex;
+        justify-content: center;
+        font-family: "Rajdhani", sans-serif;
+        width: 100%;
+        margin-left: 12%;
+    }
+
+    .izquierda a{
+        font-size: 30px;
+        color: #f08ae3;
+        font-weight: bold;
+        text-decoration: none;
+        text-transform: uppercase;
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+
+    .izquierda a:hover{
+        animation: roll 1s ease-in infinite;
+    }
+    .derecha{
+        margin-left: 20%;
+        width: 35%;
+    }
+
+    .derecha a{
+        font-size: 30px;
+        color: #f08ae3;
+        font-weight: bold;
+        text-decoration: none;
+        text-transform: uppercase;
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+
+    .derecha a:hover{
+        animation: roll 1s ease-in infinite;
+    }
+
+    .derecha a button{
+        background: linear-gradient(to bottom, #f08ae3, #5ac2a3 50%);
+		color: #fff;
+		border: none;
+		border-radius: 15px;
+		font-size: 15px;
+		text-transform: uppercase;
+		padding: 10px;
+		width: 32%;
+		font-family: "Rajdhani", sans-serif;
+		font-weight: bold;
+    }
+
+    @keyframes roll{
+		0%{
+			filter: drop-shadow(1px 2px 2px aqua);
+		}
+		25%{
+			filter: drop-shadow(1px 2px 2px #725fd1);
+		}
+		50%{
+			filter: drop-shadow(1px 2px 2px violet);
+		}
+		75%{
+			filter: drop-shadow(1px 2px 2px pink);
+		}
+		100%{
+			filter: drop-shadow(1px 2px 2px #f8cc85);
+		}
+	}
+
+    @media (width < 1400px){
+        header a img{
+            top: 10px;
+        }
+
+        section{
+            margin-left: 6%;
+        }
+    }
+
+    @media (width < 1100px){
+        header{
+            padding: 10px 0 10px 0;
+        }
+
+        header a img{
+            top: -10px;
+        }
+
+        .izquierda a{
+            font-size: 20px;
+        }
+
+        .derecha a{
+            font-size: 20px;
+        }
+
+        .derecha a button{
+            font-size: 10px;
+        }
+    }
+
+    @media (width < 500px){
+        header a img{
+            top: 10px;
+            width: 25%;
+            left: 36%;
+        }
+        
+        .izquierda a{
+            font-size: 15px;
+        }
+
+        .derecha a{
+            font-size: 15px;
+        }
+
+        .derecha a button{
+            width: 70%;
+            margin-left: -11px;
+        }
+    }
+</style>
