--- a/src/layouts/Layout-pag.astro
+++ b/src/layouts/Layout-pag.astro
@@ -6,6 +6,8 @@ interface Props {
 const { title } = Astro.props;
 
 import Logo from "../img/logotipo.png";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <!doctype html>
@@ -19,9 +21,11 @@ import Logo from "../img/logotipo.png";
 		<title>{title}</title>
 	</head>
 	<body>
+		<Header />
 		<main>
 			<slot />
 		</main>
+        <Footer />
 	</body>
 </html>
 <style is:global>
