--- a/src/pages/reset.astro
+++ b/src/pages/reset.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro"
 import Logo from "../img/logotipo.png"
 ---
 
-<Layout title="Cambiar de contraseña">
+<Layout title="Boku no Coffee | Cambiar contraseña">
     <main>
         <form action="" method="post">
             <fieldset>
