modified:   src/components/Footer.astro 	modified:   src/components/Header.astro 	new file:   src/pages/contacto.astro

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -30,6 +30,7 @@ import Logo from '../img/logotipo.png';
         border-bottom: 2px solid black;
         box-shadow: 0 2.5px 10px black;
         padding: 20px 0 20px 0;
+        z-index: 3;
     }
 
     header a{
