--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -26,6 +26,7 @@ import Git from '../img/github.png';
         position: relative;
         left: 25%;
         bottom: 70px;
+        z-index: 2;
     }
 
     #text{
