--- a/src/pages/postres.astro
+++ b/src/pages/postres.astro
@@ -55,3 +55,105 @@ import Taiyaki from '../productos/postre/taiyaki.png';
         </section>
     </main>
 </LayoutPag>
+
+<style>
+	@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap');
+
+    main{
+        width: 100%;
+        height: 150vh;
+        display: flex;
+        flex-direction: row;
+        font-family: "Rajdhani", sans-serif;
+    }
+
+    #selector{
+        position: fixed;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        top: 35%;
+        width: 25%;
+    }
+
+    #selector a button{
+        width: 100%;
+        background: linear-gradient(to bottom, #f08ae3, #5ac2a3 50%);
+        color: #fff;
+        border: none;
+        border-radius: 5px;
+        font-size: 40px;
+        font-weight: bold;
+        text-transform: uppercase;
+        font-family: "Rajdhani", sans-serif;
+        padding: 20px;
+    }
+
+    #selector a{
+        margin: 10px;
+        width: 65%;
+        transition: all 0.3s ease-out;
+    }
+
+    #selector a:hover{
+        scale: 1.2;
+        margin-left: 50px;
+    }
+
+    #body{
+        display: flex;
+        justify-content: end;
+        flex-direction: column;
+        width: 75%;
+        margin-left: 20%;
+        position: relative;
+        top: -8%;
+    }
+
+    div{
+        display: flex;
+        justify-content: center;
+        flex-direction: row;
+        margin-bottom: 10%;
+    }
+
+    div h1{
+        color: #f08ae3;
+        font-size: 40px;
+        position: relative;
+        top: -10%;
+        left: 10%;
+    }
+
+    .container{
+        background: #902576;
+        color: #fff;
+        border: none;
+        border: 1px solid #f08ae3;
+        border-radius: 15px;
+        width: 50%;
+        margin: 50px;
+        padding: 10px 0 30px 0px;
+        transition: all 0.3s ease-in-out;
+    }
+
+    .container:hover{
+        scale: 1.1;
+    }
+
+    .container h2{
+        position: relative;
+        left: 20%;
+    }
+
+    .container p{
+        position: relative;
+        top: 75%;
+        padding: 10px;
+    }
+
+    .container img{
+        width: 100%;
+        padding: 20px;
+    }
+</style>
